# NexusOJ

./: .gitignore  README.md
NexusOJ/: .gitignore  README.md  index.html  pnpm-lock.yaml  tsconfig.json  vite.config.ts
NexusOJ/scripts/: clear.js
NexusOJ/src/: App.vue  types.ts
admin/: .env  README.en.md  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/: App.vue  main.ts
agent/: .env  data_vectorization.py  main.py  requirements.txt  system_prompt.txt
agent/tools/: rag_tool.py
backend/: .air.toml  .gitignore  Makefile  config.ini  go.mod  go.sum  main.go
backend/cache/: cache.go  hash.go  list.go  set.go  string.go
backend/config/: config.go
backend/controllers/: admin.go  blog.go  chat.go  comment.go  contest.go  filedownload.go  fileupload.go  ide.go  judge.go  problem.go  record.go  training.go  user.go  util.go
backend/dao/: dao.go
backend/middleware/: request_logger.go
backend/migrations/: migrations.go
backend/models/: blog.go  chat.go  comment.go  contest.go  judge.go  problem.go  record.go  solution.go  training.go  user.go
backend/router/: router.go
dekstop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dekstop/src-tauri/: Cargo.toml  tauri.conf.json
dekstop/src-tauri/src/: api.rs  lib.rs  main.rs
docker-judge/: Makefile  install.sh  main.py  requirements.txt  utils.py  watcher.py
frontend/: .env.example  CLAUDE.md  constants.ts  index.html  metadata.json  package.json  pnpm-lock.yaml  vite.config.ts
judge-docker/: .gitignore  README.md
mobile/: README.md
(+289 files in other folders)
